syntax = "proto3";

package xc;

message PacketAsset {
  AssetId assetId = 1;
  Uint128 amount = 2;
}

message Packet {
  Account interpreter = 1;
  UserOrigin user_origin = 2;
  Salt salt = 3;
  Program program = 4;
  repeated PacketAsset assets = 5;
}

message UserOrigin {
  Network network = 1;
  Account account = 2;
}

message Uint128 {
  uint64 highBits = 1;
  uint64 lowBits = 2;
}

message Program {
  bytes tag = 1;
  Instructions instructions = 2;
}

message Instructions {
  repeated Instruction instructions = 1;
}

message Instruction {
  oneof instruction {
    Transfer transfer = 1;
    Spawn spawn = 2;
    Call call = 3;
    Exchange exchange = 4;
  }
}


message Ratio {
  uint64 nominator = 1;
  uint64 denominator = 2;
}

message Unit {
  Uint128 integer = 1;
  Ratio ratio = 2;
}

message Absolute {
  Uint128 value = 1;
}

message Balance {
  oneof balance_type {
    Ratio ratio = 1;
    Absolute absolute = 2;
    Unit unit = 3;
  }
}

message Account {
  bytes account = 1;
}

message AssetId {
  Uint128 id = 1;
}

message ExchangeId {
  Uint128 id = 1;
}

message Asset {
  AssetId assetId = 1;
  Balance balance = 2;
}

message Self {
  uint32 self = 1;
}

message Tip {
  uint32 id = 1;
}

message Result {
  uint32 result = 1;
}


message AssetAmount {
  AssetId assetId = 1;
  Balance balance = 2;
}

message IpRegister {
  uint64 ip = 1;
}

message BindingValue {
  oneof type {
    Self self = 1;
    Tip tip = 2;
    Result result = 3;
    AssetAmount assetAmount = 4;
    AssetId assetId = 5;
    IpRegister ipRegister = 6;
  }
}

message Binding {
  uint32 position = 1;
  BindingValue bindingValue = 2;
}

message Bindings {
  repeated Binding bindings = 1;
}

message Transfer {
  oneof account_type{
    Account account = 1;
    Tip tip = 2;
  }
  repeated Asset assets = 3;
}

message Exchange {      
  ExchangeId id = 1; 
  repeated Asset give = 5;
  repeated Asset want = 6;
}

message Salt {
  bytes salt = 1;
}

message Network {
  uint32 networkId = 1;
}

message Spawn {
  Network network = 1;
  Salt salt = 3;
  Program program = 4;
  repeated Asset assets = 5;
}

message Call {
  bytes payload = 1;
  Bindings bindings = 2;
}
